--- a/src/main/webapp/CSS/index.css
+++ b/src/main/webapp/CSS/index.css
@@ -181,19 +181,35 @@ body {
 .table {
     width: 100%;
     border-collapse: collapse;
+    table-layout: fixed;  
 }
 
 .table-cell {
     padding: 0.75rem;
     border: 1px solid #ddd;
     font-size: 0.9rem;
+    white-space: nowrap; 
+    overflow: hidden;    
+    text-overflow: ellipsis; 
 }
 
 .table-header {
     background-color: #f2f2f2;
     font-weight: bold;
+    position: sticky; 
+    top: 0;       
+    z-index: 1;       
 }
 
+.col-checkbox { width: 50px; }
+.col-id { width: 100px; }
+.col-name { width: 150px; }
+.col-date { width: 100px; }
+.col-time { width: 100px; }
+.col-modality { width: 100px; }
+.col-desc { width: 200px; }
+.col-series { width: 80px; }
+.col-images { width: 80px; }
 .verify-button {
     background-color: #3B82F6;
     color: white;
