--- a/src/main/webapp/CSS/getBoardList.css
+++ b/src/main/webapp/CSS/getBoardList.css
@@ -82,3 +82,11 @@ body {
     color: white;
     border-radius: 0.25rem;
 }
+
+.return-button {
+    width: 100%;
+    background-color: #3b82f6;
+    color: white;
+    padding: 0.5rem;
+    border-radius: 0.375rem;
+}
