--- a/src/main/webapp/CSS/memberDetail.css
+++ b/src/main/webapp/CSS/memberDetail.css
@@ -1,4 +1,3 @@
-
 .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -90,4 +89,13 @@ h1 {
 
 .pagination a:hover:not(.active) {
     background-color: #ddd;
+}
+
+.back-button {
+    padding: 8px 15px;
+    background-color: #3b82f6;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
