--- a/src/main/webapp/CSS/getBoardList.css
+++ b/src/main/webapp/CSS/getBoardList.css
@@ -9,6 +9,7 @@ body {
     padding: 1.5rem;
     border-radius: 0.5rem;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    position: relative; /* 추가된 속성 */
 }
 .title {
     font-size: 1.5rem;
@@ -74,19 +75,34 @@ body {
 }
 .write-button {
     margin-top: 1rem;
-    text-align: right;
+    display: flex;
+    justify-content: flex-end; /* 변경된 속성 */
+    position: relative; 
+    top: 1.5rem; 
+    background-color: #FF6347; 
+    padding: 0.5rem 1rem;
+    border-radius: 0.25rem;
+    color: white;
+    width: fit-content; 
+    height: fit-content; 
 }
+.return-button {
+    margin-top: 1rem;
+    display: flex;
+    justify-content: flex-start;
+    position: relative; 
+    top: 1.5rem; 
+    background-color: #007bff; 
+    padding: 0.5rem 1rem;
+    border-radius: 0.25rem;
+    color: white;
+    width: fit-content; 
+    height: fit-content; 
+}
+
 .write-link {
     padding: 0.5rem 1rem;
     background-color: #3b82f6;
     color: white;
     border-radius: 0.25rem;
-}
-
-.return-button {
-    width: 100%;
-    background-color: #3b82f6;
-    color: white;
-    padding: 0.5rem;
-    border-radius: 0.375rem;
 }
