--- a/src/main/webapp/CSS/index.css
+++ b/src/main/webapp/CSS/index.css
@@ -172,6 +172,12 @@ body {
     color: white;
 }
 
+.search-button-blue {
+    background-color: #3B82F6;
+    color: white;
+}
+
+
 .table-container {
     width: 100%;
     overflow-x: auto;
