--- a/src/main/webapp/CSS/sign.css
+++ b/src/main/webapp/CSS/sign.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 .page-container {
     background-color: #f3f4f6;
     padding: 2rem;
@@ -24,7 +28,8 @@
     text-decoration: none;
     border-radius: 0.25rem;
     font-weight: bold;
-    transition: background-color 0.3s, transform 0.3s;
+    transition: background-color 0.3s
+ transform 0.3s;
 }
 
 .login-button:hover {
@@ -47,6 +52,7 @@
     display: block;
     color: #4b5563;
     margin-bottom: 0.5rem;
+    font-weight: bold; 
 }
 
 .form-input {
