--- a/src/main/webapp/CSS/dicom.css
+++ b/src/main/webapp/CSS/dicom.css
@@ -8,7 +8,45 @@
 
 /* Image item styles */
 .image-grid-item {
-    position: relative;
-    width: 200px;
-    height: 200px; /* Adjust height as needed */
+	position: relative;
+	width: 200px;
+	height: 200px; /* Adjust height as needed */
+}
+
+.modal {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+	background-color: #fefefe;
+	margin: 15% auto;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 600px;
+	max-width: 80%; 
+}
+
+#modalReport {
+	width: 100%;
+}
+
+.close {
+	color: #aaa;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+}
+
+.close:hover, .close:focus {
+	color: black;
+	text-decoration: none;
+	cursor: pointer;
 }
