--- a/src/main/webapp/CSS/viewer.css
+++ b/src/main/webapp/CSS/viewer.css
@@ -8,7 +8,7 @@ body {
 }
 
 .container {
-	max-width: 56rem;
+   max-width: 56rem;
     margin-left: auto;
     margin-right: auto;
     background-color: black;
@@ -30,6 +30,7 @@ body {
     box-sizing: border-box;
     position: fixed;
     left: 0;
+    margin-top: 50px;
 }
 
 .main-content {
@@ -42,6 +43,7 @@ body {
     border: 1px solid red;
     width: 100%;
     height: 80vh;
+    margin-top: 50px;
 }
 
 .top-bar {
@@ -123,6 +125,7 @@ body {
     border: none;
     cursor: pointer;
     margin: 0 5px;
+    margin-bottom: 10px;
 }
 
 .pagination-controls button:disabled {
@@ -230,6 +233,12 @@ body {
     margin-top: 10px;
 }
 
+#dicomImages {
+   display: flex;
+   justify-content: center;
+   justify-content: space-evenly;
+}
+
 /* Responsive design */
 @media (max-width: 768px) {
     .container {
@@ -243,6 +252,7 @@ body {
 
     .main-content {
         width: 100%;
+        
     }
 
     .top-bar {
